--- a/pj_release/Estilos2.css
+++ b/pj_release/Estilos2.css
@@ -7,5 +7,8 @@
     background-color: rgb(12, 51, 82 )
 }
 body{
-    background-image: url("bg4.jpg");
+    background-image: url("/resources/bg4.jpg");
+}
+span.navbar-text:hover{
+    color: white;
 }
